[section24] Add Code Handle Resiter And Verify OTP
